--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             </a>
                 </li>
                 <li>
+                    <a href="/form/form.html">
+                        Form
+                    </a>
+                </li>
+                <li>
                     <a href="#">
    			Contact Us
             </a>
