--- a/index.html
+++ b/index.html
@@ -18,33 +18,18 @@
                 <li>
                     <a href="#">
    			About
-            </a>
-                </li>
-                <li>
-                    <a href="#">
-   			Alumni
-            </a>
-                </li>
+            	</a>
+	    	</li>
                 <li>
                     <a href="/gallery/gallery_timeline.html">
    			Gallery
             </a>
                 </li>
                 <li>
-                    <a href="#">
-			What's Next
-            </a>
-                </li>
-                <li>
                     <a href="/form/form.html">
-                        Form
+                        Register for 1st June
                     </a>
-                </li>
-                <li>
-                    <a href="#">
-   			Form
-            </a>
-                </li>
+	    	</li>
             </ul>
         </nav>
 
