--- a/form/form.html
+++ b/form/form.html
@@ -37,6 +37,7 @@
                 name: document.getElementById('name').value,
                 email: document.getElementById('email').value,
                 phone: document.getElementById('phone').value,
+                address: document.getElementById('address').value,
                 collegename: document.getElementById('collegenameInput').value
             });
          
@@ -47,7 +48,7 @@
      <div class="container">
         <form action=""  id="form">
          
-             <div class="alert">Your Information is saved</div>
+             <div class="alert">Please fill in the details</div>
              <div class="inputBox">
                  <input type= "text" id="name" placeholder="Your name" />
              </div>
@@ -69,6 +70,9 @@
                   <option value="IIITd">
                 </datalist>
                 </div>
+             <div class="inputBox">
+                 <input type="address" id="address" placeholder="Residance address" />
+             </div>
              <div class="inputBox">
                  <button type="submit" >Submit</button>
              </div>
