--- a/form/form.html
+++ b/form/form.html
@@ -59,7 +59,7 @@
                  <input type="tel" id="phone" placeholder="Your Phone No." pattern="[0-9]{10}"/>
              </div>
              <div>
-                <input list="collegename" id="collegenameInput" name="collegename">
+                <input list="collegename" id="collegenameInput" placeholder="College" name="collegename">
                 <datalist id="collegename">
                   <option value="MAIT">
                   <option value="BPIT">
