--- a/form/form.html
+++ b/form/form.html
@@ -41,7 +41,7 @@
                 collegename: document.getElementById('collegenameInput').value
             });
          
-            alert('Your form is submitted');
+            alert('Registration for the event Successful');
             document.getElementById('form').reset();
         });
         </script>
